apps/base/actual-budget/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget-svc
spec:
  type: ClusterIP
  selector:
    app: actual-budget
  ports:
    - name: http-actual-budget-out
      port: 5006
      protocol: TCP
      targetPort: http-actual-budget
