apps/base/actual-budget/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget-ingress
  namespace: actual-budget
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: actual-budget-svc
      port:
        number: 5006
  tls:
    - hosts:
        - budget
