apps/base/actual-budget/ingressroute-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: budget-ingressroute
  namespace: budget
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.0.10.21
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`budget.lab.biodrone.xyz`)
      kind: Rule
      services:
        - name: budget-svc
          port: 5006
  tls:
    secretName: budget-certificate-production
